--- a/.sqlc.yaml
+++ b/.sqlc.yaml
@@ -1,18 +1,9 @@
 version: "2"
 sql:
-  - engine: "postgresql"
-    queries: "query.sql"
-    schema: "pkg/db/migrations"
+  - engine: postgresql
+    queries: pkg/db
+    schema: pkg/db/migrations
     gen:
       go:
-        package: "tutorial"
-        out: "tutorial"
-        sql_package: "pgx/v5"
-  - engine: "sqlite3"
-    queries: "query.sql"
-    schema: "schema.sql"
-    gen:
-      go:
-        package: "tutorial"
-        out: "tutorial"
-        sql_package: "go-sqlite3"
+        package: sqlc
+        out: pkg/db/sqlc
