--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@heroui/react": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -20,9 +22,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-react-x": "^1.52.3",
+    "framer-motion": "^12.23.12",
     "globals": "^16.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
