--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,16 +2,17 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "bradlc.vscode-tailwindcss",
-        "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "golang.go",
-        "oven.bun-vscode",
+        "ReneSaarsoo.sql-formatter-vsc",
         "rohit-gohri.format-code-action"
       ],
       "settings": {
         "[go]": {
           "editor.defaultFormatter": "golang.go"
+        },
+        "[sql]": {
+          "editor.defaultFormatter": "ReneSaarsoo.sql-formatter-vsc"
         },
         "editor.codeActionsOnSave": [
           "source.organizeImports",
@@ -19,11 +20,7 @@
           "source.formatDocument"
         ],
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "eslint.workingDirectories": ["./ui"],
-        "files.associations": {
-          "*.css": "tailwindcss"
-        },
-        "typescript.tsdk": "/workspaces/ai/ui/node_modules/typescript/lib"
+        "SQL-Formatter-VSCode.dialect": "postgresql"
       }
     }
   },
